# bal-vidyalaya

./: .dockerignore  .gitignore  Makefile  docker-compose.yml  logging.conf
.github/workflows/: build.yml
app/: __init__.py
app/dao/: base.py
app/models/: bill.py
app/routes/: bill.py
backend/: .gitignore  Dockerfile  docker-compose.yml  logging.conf  main.py  pyproject.toml
backend/app/: __init__.py  config.py  deps.py
backend/app/models/: base.py
backend/app/routes/: bill.py
backend/scripts/: test.sh
backend/tests/: test_bill.py
docker/: docker-compose.dev.yml  docker-compose.yml  nginx.conf
frontend/: Dockerfile  index.html
frontend/public/: Readme.txt  footer.html  index.html  privacypolicy.html  sample-inner-page.html  termsofservices.html
frontend/public/assets/css/: main.css
scripts/: start.sh
